file/map/ArcGISPro/GpMessages/356850913166200
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: martes, 16 de julio de 2024 12:00:09 p. m.</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    ((4892687.7098300001-4892505.1329300003)**2+(2112046.666522109795.0268799998)**2)**0.5
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
﻿SyntaxError: invalid syntax. Perhaps you forgot a comma?
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at martes, 16 de julio de 2024 12:00:09 p. m. (Elapsed Time: 0.11 seconds)</msg></messages>